--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,67 @@
-flask==1.1.2
+argon2-cffi==20.1.0
+async-generator==1.10
+attrs==20.2.0
+backcall==0.2.0
+bleach==3.2.1
+Brotli==1.0.9
+cffi==1.14.3
+click==7.1.2
+colorama==0.4.3
+dash==1.16.1
+dash-core-components==1.12.1
+dash-html-components==1.1.1
+dash-renderer==1.8.1
+dash-table==4.10.1
+decorator==4.4.2
+defusedxml==0.6.0
+entrypoints==0.3
+Flask==1.1.2
+Flask-Compress==1.5.0
 flask-googlemaps==0.4.0
+future==0.18.2
+geojson==2.5.0
+gmaps==0.9.0
+ipykernel==5.3.4
+ipython==7.18.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+itsdangerous==1.1.0
+jedi==0.17.2
+Jinja2==2.11.2
+jsonschema==3.2.0
+jupyter-client==6.1.7
+jupyter-core==4.6.3
+jupyterlab-pygments==0.1.1
+MarkupSafe==1.1.1
+mistune==0.8.4
+nbclient==0.5.0
+nbconvert==6.0.6
+nbformat==5.0.7
+nest-asyncio==1.4.0
+notebook==6.1.4
+packaging==20.4
+pandocfilters==1.4.2
+parso==0.7.1
+pickleshare==0.7.5
+plotly==4.10.0
+prometheus-client==0.8.0
+prompt-toolkit==3.0.7
+pycparser==2.20
+Pygments==2.7.1
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+pywin32==228
+pywinpty==0.5.7
+pyzmq==19.0.2
+retrying==1.3.3
+Send2Trash==1.5.0
+six==1.15.0
+terminado==0.9.1
+testpath==0.4.4
+tornado==6.0.4
+traitlets==5.0.4
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
